# e2me

./: .gitignore  README.md  pyproject.toml  test.py
e2me/: __init__.py  api.py  e2me.toml  email_server.py  main.py  pop3.py  receive_email.py  send_email.py
