[tool.poetry]
name = "e2me"
version = "0.0.8"
description = "不知道什么时候跑完程序?发一封邮件吧"
authors = ["luzhixing12345 <luzhixing12345@163.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
toml = "*"
arrow = '*'
chardet = '*'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
e2me = 'e2me.main:main'